plugins {
    id 'java-library'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    api project(':jatot-compiler')
    
    implementation 'org.springframework.boot:spring-boot-autoconfigure:3.1.2'
    implementation 'org.springframework.boot:spring-boot-starter:3.1.2'
    implementation 'org.springframework:spring-webmvc:6.1.10'
    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.1.2'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.2'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:all', '-Xlint:-processing', '-Werror']
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs('-XX:+EnableDynamicAgentLoading')
}
